# lucide-gpui

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: buildscript.sh  update.yml
lucide-gpui/: Cargo.toml  build.rs
lucide-gpui/examples/: custom_colors.rs  custom_sizes.rs  simple.rs
lucide-gpui/src/: assets.rs  lib.rs
lucide-gpui_macros/: Cargo.toml
lucide-gpui_macros/src/: lib.rs
