[package]
name = "lucide-gpui"
version = "0.1.0"
edition = "2021"

publish = true
license = "MIT AND ISC"
keywords = ["gpui", "lucide", "gui", "icons"]
categories = ["gui"]
description = "A collection of Lucide icons for use with the GPUI library"
readme = "../README.md"
repository = "https://github.com/everbuild-org/lucide-gpui"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "ca37d391098f77b1a85f4d8ca3521a6ea67db969" }
anyhow = "1.0.80"

lucide-gpui_macros = { path = "../lucide-gpui_macros" }


[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "custom_sizes"
path = "examples/custom_sizes.rs"

[[example]]
name = "custom_colors"
path = "examples/custom_colors.rs"
